Fix building on other versions